--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,15 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "paper"
+name = "paper-hive"
 version = "0.0.1"
-description = "Paper - Pytorch"
+description = "RPH - Swarms Research Paper Hive"
 license = "MIT"
 authors = ["Kye Gomez <kye@apac.ai>"]
-homepage = "https://github.com/kyegomez/paper"
-documentation = "https://github.com/kyegomez/paper"  # Add this if you have documentation.
+homepage = "https://github.com/The-Swarm-Corporation/Research-Paper-Hive"
+documentation = "https://github.com/The-Swarm-Corporation/Research-Paper-Hive"  # Add this if you have documentation.
 readme = "README.md"  # Assuming you have a README.md
-repository = "https://github.com/kyegomez/paper"
+repository = "https://github.com/The-Swarm-Corporation/Research-Paper-Hive"
 keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -24,7 +24,10 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.10"
 swarms = "*"
-zetascale = "*"
+loguru = "*"
+pydantic = "*"
+dotenv = "*"
+
 
 [tool.poetry.dev-dependencies]
 # Add development dependencies here
